attempt to fix image

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -73,7 +73,7 @@
 <div id="content">
 <div class="container">
     <figure class="avatar">
-    <img src="/me_sweater_formal.jpg"/> 
+    <img src="static/me_sweater_formal.jpg"/> 
 </figure>
 
 <p><strong>Dr. David Reinstein</strong></p>
