attempt to cleanup/fix and rebuild

--- a/public/index.html
+++ b/public/index.html
@@ -85,41 +85,35 @@
 <!-- raw HTML omitted -->
 <h2 id="my-research-and-impact-work-focuses-on">My research and impact work focuses on</h2>
 <p>(i) the determinants and motivators of (effective) charitable giving,</p>
-<p>(ii) measuring social, psychological, and  institutional influences on life choices and consumer behavior, and</p>
+<p>(ii) measuring social, psychological, and institutional influences on life choices and consumer behavior, and</p>
 <p>(iii) building and measuring tools and policies aiming to improve social outcomes.</p>
 <p>I combine microeconomic modeling, analysis of observational data, and field experiments and trials to bring evidence to a variety of interconnected questions, and provide tools for philanthropists, nonprofit organisations, governments, and managers.</p>
-<p>I work to produce and encourage open and collaborative research, learning, and positive impact outside of traditional settings.
-<!-- raw HTML omitted --></p>
+<p>I work to produce and encourage open and collaborative research, learning, and positive impact outside of traditional settings.</p>
+<!-- raw HTML omitted -->
 <h2 id="i-published-papers">I published papers&hellip;</h2>
-<p>&hellip; in traditional academic journals such as the Journal of Public Economics,  Journal of Economics and Management Strategy, and Social Psychological and Personality Science. See <a href="#publications">my CV</a> for a full list. These include:</p>
+<p>&hellip; in traditional academic journals such as the Journal of Public Economics,  Journal of Economics and Management Strategy, and Social Psychological and Personality Science. See <a href="#pubs">my CV</a> for a full list. These include:</p>
 <p><em>Observational/causal econometrics</em>: <a href="https://www.researchgate.net/publication/4992942_The_Influence_of_Expert_Reviews_on_Consumer_Demand_for_Experience_Goods_A_Case_Study_of_Movie_Critics">“The Influence of Expert Reviews &hellip; A Case Study of Movie Critics” (2005)</a>, <a href="https://www.researchgate.net/publication/227377867_Does_One_Charitable_Contribution_Come_at_the_Expense_of_Another">“Does One Contribution Come at the Expense of Another?&hellip;” (2011)</a></p>
 <p><em>Field and lab experiments</em>:  “Decomposing Desert and Tangibility Effects in a Charitable Giving Experiment” (2012),  <a href="https://ore.exeter.ac.uk/repository/bitstream/handle/10871/32001/GivingProbabilityMaster1_commentsout.pdf?sequence=1&amp;isAllowed=y">“Ex-ante Commitments to `Give if you Win’ Exceed Donations After a Win” (2018)</a></p>
 <p><em>Applied microeconomic/behavioral theory:</em> <a href="https://www.dropbox.com/s/tx4yfun1ctxuezw/LosingFace.pdf?dl=0">“Losing Face” (2018)</a>, <a href="https://www.sciencedirect.com/science/article/pii/S0167268111001806">“Anonymous Rituals” (2012)</a>, <a href="https://www.researchgate.net/publication/239768339_Efficient_Consumer_Altruism_and_Fair_Trade_Products">“Efficient Consumer Altruism and Fair Trade Products” (2012)</a></p>
 <!-- raw HTML omitted -->
 <h2 id="the-new-way">The new way</h2>
 <p>Peer review is great (and <em>peer evaluation</em> is better), but in the 2020&rsquo;s  we can do better than paying Elsevier&amp;co to &ldquo;publish&rdquo; static pdfs for us. <!-- raw HTML omitted --> I&rsquo;m working to research/write/gain-critical-feedback in dynamic, collaborative, open/transparent, and continuously-updated formats.</p>
-<p>Further discussion: See the <a href="https://bit.ly/unjournal">&lsquo;unjournal&rsquo; discussion and project</a></p>
+<p>Further discussion: See the <a href="https://bit.ly/unjournal">&lsquo;unjournal&rsquo; discussion</a> and <a href="https://bit.ly/eaunjournal">project board</a></p>
 <!-- raw HTML omitted -->
-<p><strong>Below, some work-in-progress in this mode:</strong></p>
+<h3 id="some-of-my-work-in-progress-in-this-mode">Some of my work-in-progress in this mode:</h3>
 <!-- raw HTML omitted -->
-<p><em>A broad project of synthesis and meta-analysis:</em> <a href="https://bit.ly/eg_barriers">Increasing effective charitable giving: The puzzle, what we know, what we need to know next</a></p>
-<p><em>Reporting on an experimental research project project:</em> <a href="https://daaronr.github.io/dualprocess/">Impact of impact treatments on giving: field experiments and synthesis</a></p>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
 <p><em>An outreach/impact project:</em> <a href="innovationsinfundraising.org">Innovations in Fundraising</a></p>
+<!-- raw HTML omitted -->
 <p><em>Teaching/learning and research resource &lsquo;web books&rsquo;, and building and sharing knowledge and notes</em></p>
-<ul>
-<li>
 <p><a href="https://daaronr.github.io/writing_econ_research/about-this-work.html">Researching and writing for Economics students</a>,</p>
-</li>
-<li>
 <p><a href="https://daaronr.github.io/micro-giving-pub/">Microeconomics (MSc teaching)</a></p>
-</li>
-<li>
 <p><a href="https://daaronr.github.io/metrics_discussion/introduction.html">Statistics, econometrics, experiment and survey methods, data science: Notes (in progress)</a></p>
-</li>
-</ul>
 <!-- raw HTML omitted -->
 <h2 id="other-projects-and-affiliations">Other projects and affiliations</h2>
-<p><em>Ironically, I&rsquo;m &ldquo;humbled&rdquo; by the honor of &ldquo;winning&rdquo; grants (so humbled that I feel compelled to announce it on my CV <a href="#grants">here</a>)</em></p>
+<p><em>Ironically, I&rsquo;m &ldquo;humbled&rdquo; by the honor of &ldquo;winning&rdquo; grants (so humbled that I feel compelled to announce it on my CV <a href="https://daaronr.github.io/markdown-cv/">here</a>)</em></p>
 
 </div>
 
